Fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,6 +511,7 @@ ul {
 }
 
 .project-card{
-    display: inline;
+    display: grid;
+
     
 }
